<resources>
    <string name="app_name">TV прoграма</string>

<!--    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>-->

    <string name="progressbar.loading.text">Іде загрузка…</string>

    <string name="alert.error.no_internet">Помилка з\'єднання! \nПеревірте підключення до інтернету.</string>
    <string name="alert.btn.close">Закрити</string>

    <string name="howto.description">\tМобільний додаток надає інформацію про программу телепередач українських телеканалів,
        а також можливість перегляду новин шоу-бізнесу. Для деяких каналів доступна можливість перегляду в режимі онлайн.
    </string>

    <string name="title_home">TV прoграма</string>
    <string name="title_channels">Канали</string>
    <string name="title_categories">Категорії</string>
    <string name="title_news">Новини</string>
    <string name="title_online">Наживо</string>
    <string name="title_settings">Налаштування</string>
    <string name="title_about">Про додаток</string>

    <string name="channel.novyj">Новий канал</string>
    <string name="channel.stb">СТБ</string>
    <string name="channel.ictv">ICTV</string>
    <string name="channel.one_plus_one">1+1</string>
    <string name="channel.mega">Мега</string>
    <string name="channel.ukraina">Україна</string>
    <string name="channel.ua_pervyj">UA:Перший</string>
    <string name="channel.inter">Інтер</string>
    <string name="channel.5kanal">5 канал</string>
    <string name="channel.k1">К1</string>
    <string name="channel.ntn">НТН</string>
    <string name="channel.tet">ТЕТ</string>
    <string name="channel.two_plus_two">2+2</string>
    <string name="channel.piksel">Піксель</string>
    <string name="channel.nlo">НЛО TV</string>
    <string name="channel.enterfilm">Enter-фільм</string>
    <string name="channel.m1">M1</string>
    <string name="channel.k2">К2</string>
    <string name="channel.zoom">Zoom</string>
    <string name="channel.espresso">Еспресо TV</string>
    <string name="channel.tonis">Tonis</string>
    <string name="channel.football1">Футбол 1</string>
    <string name="channel.football2">Футбол 2</string>
    <string name="channel.hromadske">Громадське</string>
    <string name="channel.112">112 Україна</string>
    <string name="channel.24channel">24 Канал</string>
    <string name="channel.ZIK">ZIK</string>
    <string name="channel.euronews_eng">Euronews англійською</string>

    <string name="tv_serials">Серіали</string>
    <string name="tv_films">Фільми</string>
    <string name="tv_entertainment">Розважальні</string>
    <string name="tv_information">Інформаційні</string>
    <string name="tv_sociopolitical">Суспільно-політичні</string>
    <string name="tv_show">Ток-шоу</string>
    <string name="tv_sport">Спорт</string>
    <string name="tv_kid">Для дітей</string>

    <string name="notification_union"> o </string>
</resources>
