<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_home">
        <menu>
            <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_channels"/>
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_categories"/>
            <item
                android:id="@+id/nav_online"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/title_online"/>
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_news"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_settings"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/title_about"/>
    </group>

<!--    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>-->

</menu>
